--- a/app/views/home/_topchart.html.erb
+++ b/app/views/home/_topchart.html.erb
@@ -1,63 +1,27 @@
 <script>
-Highcharts.getJSON('https://demo-live-data.highcharts.com/aapl-c.json', data => {
-const chart = Highcharts.stockChart('container', {
-    chart: {
-        height: 400
-    },
-
-    title: {
-        text: 'Highcharts Stock Responsive Chart'
-    },
-
-    subtitle: {
-        text: 'Click small/large buttons or change window size to test responsiveness'
-    },
-
-    rangeSelector: {
-        selected: 1
-    },
-
-    series: [{
-        name: 'AAPL Stock Price',
-        data: data,
-        type: 'area',
-        threshold: null,
-        tooltip: {
-            valueDecimals: 2
-        }
-    }],
-
-    responsive: {
-        rules: [{
-            condition: {
-                maxWidth: 500
+document.addEventListener('DOMContentLoaded', function () {
+        const chart = Highcharts.chart('container', {
+            chart: {
+                type: 'bar'
             },
-            chartOptions: {
-                chart: {
-                    height: 300
-                },
-                subtitle: {
-                    text: null
-                },
-                navigator: {
-                    enabled: false
+            title: {
+                text: 'Fruit Consumption'
+            },
+            xAxis: {
+                categories: ['Apples', 'Bananas', 'Oranges']
+            },
+            yAxis: {
+                title: {
+                    text: 'Fruit eaten'
                 }
-            }
-        }]
-    }
-});
-
-document.getElementById('small').addEventListener('click', () => {
-    chart.setSize(400);
-});
-
-document.getElementById('large').addEventListener('click', () => {
-    chart.setSize(800);
-});
-
-document.getElementById('auto').addEventListener('click', () => {
-    chart.setSize(null);
-});
-});
+            },
+            series: [{
+                name: 'Jane',
+                data: [1, 0, 4]
+            }, {
+                name: 'John',
+                data: [5, 7, 3]
+            }]
+        });
+    });
 </script>
-
