--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,17 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    
-    <script src="https://code.highcharts.com/stock/highstock.js"></script>
-    <script src="https://code.highcharts.com/stock/modules/data.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/annotations.js"></script>
   </head>
 
   <body>
   <%= render 'home/navbar' %>
-  <div id="container"></div>
-  
+  <div id="container" style="width:100%; height:400px;"></div>
   <%= render 'home/topchart' %>
+  <div id="container2"></div>
+  <%= render 'home/bottomchart' %>
   <%= yield %>
 
   </body>
