--- a/app/views/home/_bottomchart.html.erb
+++ b/app/views/home/_bottomchart.html.erb
@@ -1,56 +1,62 @@
 <script>
-const chart = Highcharts.chart('container2', {
-    chart: {
-        type: 'column'
-    },
-    title: {
-        text: 'Highcharts responsive chart'
-    },
-    subtitle: {
-        text: 'Resize the frame to see the axes change'
-    },
-    xAxis: {
-        categories: ['January', 'February', 'March', 'April', 'May', 'June',
-            'July', 'August', 'September', 'October', 'November', 'December']
-    },
-    yAxis: {
-        labels: {
-            x: -15
+Highcharts.getJSON('https://demo-live-data.highcharts.com/aapl-c.json', data => {
+    const chart = Highcharts.stockChart('container2', {
+        chart: {
+            height: 400
         },
+
         title: {
-            text: 'Items'
-        }
-    },
-    series: [{
-        name: 'Sales',
-        data: [434, 523, 345, 785, 565, 843, 726, 590, 665, 434, 312, 432]
-    }],
-    responsive: {
-        rules: [{
-            condition: {
-                maxWidth: 500
-            },
-            // Make the labels less space demanding on mobile
-            chartOptions: {
-                xAxis: {
-                    labels: {
-                        formatter: function () {
-                            return this.value.charAt(0);
-                        }
-                    }
+            text: 'Historical Highs and Lows '
+        },
+
+        subtitle: {
+            text: 'One Month History'
+        },
+
+        rangeSelector: {
+            selected: 1
+        },
+
+        series: [{
+            name: 'Temperature',
+            data: data,
+            type: 'area',
+            threshold: null,
+            tooltip: {
+                valueDecimals: 2
+            }
+        }],
+
+        responsive: {
+            rules: [{
+                condition: {
+                    maxWidth: 500
                 },
-                yAxis: {
-                    labels: {
-                        align: 'left',
-                        x: 0,
-                        y: -2
+                chartOptions: {
+                    chart: {
+                        height: 300
                     },
-                    title: {
-                        text: ''
+                    subtitle: {
+                        text: null
+                    },
+                    navigator: {
+                        enabled: false
                     }
                 }
-            }
-        }]
-    }
+            }]
+        }
+    });
+
+    document.getElementById('small').addEventListener('click', () => {
+        chart.setSize(400);
+    });
+
+    document.getElementById('large').addEventListener('click', () => {
+        chart.setSize(800);
+    });
+
+    document.getElementById('auto').addEventListener('click', () => {
+        chart.setSize(null);
+    });
 });
 </script>
